
        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* Add instrumentation of all AWS S3 methods when using the
  https://www.npmjs.com/package/aws-sdk[JavaScript AWS SDK v2] (`aws-sdk`).

[float]
===== Bug fixes

* Fix inconsistencies in HTTP spans from other APM agents.
  <<span-subtype, `span.subtype`>> will now be "http" for HTTP, HTTPS, and
  HTTP/2 outgoing spans -- previously it was "http", "https", "http2",
  respectively. As well, <<span-action, `span.action`>> will now be the HTTP
  method (e.g. "GET", "PUT", "POST"), rather than "http". ({pull}2075[#2075])

* Fixed error where SQS messages sent without an active transactions could
  crash the agent. ({issues}2113[#2113])

* Fixed support for proxies in destination context ({issues}1770[#1770])

[[release-notes-x.x.x]]
==== 3.16.0 - 2021/06/14

[float]
===== Features

* Added <<span-frames-min-duration, `spanFramesMinDuration`>>
  configuration field, allowing users to set a time threshold value that spans
  must reach before the agent will add a stack trace to the span. As a result,
  many short spans that previously included stack traces by default no longer
  will.

* Prefer W3C "traceparent" header over "elastic-apm-traceparent" for incoming
  requests. {pull}2079[#2079]

[float]
===== Bug fixes

* Fix a crash (`TypeError: lastPrepareStackTrace`) in the agent when used with
  React v17 and later ({issues}1980[#1980]).

* Performance improvements have been made in error and stacktrace capture ({pull}2094[#2094]).
  This also included in two bug fixes:
+
** Before this change, some captured errors (for example a `next(new Error('boom')` from
   an Express handler) would mark the error as "unhandled" incorrectly. "Unhandled"
   exceptions are those caught by an `uncaughtException` handler.