@@ -196,7 +196,7 @@ Agent.prototype.start = function (opts) {
       pkg = require(path.join(basedir, 'package.json'))
     } catch (e) {}
 
-    this.logger.trace('agent configured correctly %o', {
+    this.logger.trace({
       pid: process.pid,
       ppid: process.ppid,
       arch: process.arch,
@@ -207,7 +207,7 @@ Agent.prototype.start = function (opts) {
       main: pkg ? pkg.main : '<could not determine>',
       dependencies: pkg ? pkg.dependencies : '<could not determine>',
       conf: this._conf.toJSON()
-    })
+    }, 'agent configured correctly')
   }
 
   this._transport = this._conf.transport(this._conf, this)
@@ -357,6 +357,14 @@ Agent.prototype.captureError = function (err, opts, cb) {
     opts = EMPTY_OPTS
   } else if (!opts) {
     opts = EMPTY_OPTS
+  }
+
+  // Quick out if disableSend=true, no point in the processing time.
+  if (this._conf.disableSend) {
+    if (cb) {
+      process.nextTick(cb, null, errors.generateErrorId())
+    }
+    return
   }
 
   const agent = this
