@@ -13,6 +13,7 @@ var packageName = require('../package').name
 
 const { WildcardMatcher } = require('./wildcard-matcher')
 const { CloudMetadata } = require('./cloud-metadata')
+const { NoopTransport } = require('./noop-transport')
 
 // Standardize user-agent header. Only use "elasticapm-node" if it matches "elastic-apm-node".
 if (packageName === 'elastic-apm-node') {
@@ -53,6 +54,7 @@ var DEFAULTS = {
   cloudProvider: 'auto',
   containerId: undefined,
   disableInstrumentations: [],
+  disableSend: false,
   environment: process.env.NODE_ENV || 'development',
   errorMessageMaxLength: '2kb',
   errorOnAbortedRequests: false,
@@ -110,6 +112,7 @@ var ENV_TABLE = {
   containerId: 'ELASTIC_APM_CONTAINER_ID',
   cloudProvider: 'ELASTIC_APM_CLOUD_PROVIDER',
   disableInstrumentations: 'ELASTIC_APM_DISABLE_INSTRUMENTATIONS',
+  disableSend: 'ELASTIC_APM_DISABLE_SEND',
   environment: 'ELASTIC_APM_ENVIRONMENT',
   ignoreMessageQueues: 'ELASTIC_IGNORE_MESSAGE_QUEUES',
   errorMessageMaxLength: 'ELASTIC_APM_ERROR_MESSAGE_MAX_LENGTH',
@@ -171,6 +174,7 @@ var BOOL_OPTS = [
   'captureHeaders',
   'captureSpanStackTraces',
   'centralConfig',
+  'disableSend',
   'errorOnAbortedRequests',
   'filterHttpHeaders',
   'instrument',
@@ -264,7 +268,11 @@ class Config {
 
     normalize(this, this.logger)
 
-    if (typeof this.transport !== 'function') {
+    if (this.disableSend) {
+      this.transport = function createNoopTransport (conf, agent) {
+        return new NoopTransport()
+      }
+    } else if (typeof this.transport !== 'function') {
       this.transport = function httpTransport (conf, agent) {
         let clientLogger = null
         if (!logging.isLoggerCustom(agent.logger)) {
@@ -399,9 +407,21 @@ class Config {
       logger: true,
       transport: true
     }
+    const NICE_REGEXPS_FIELDS = {
+      ignoreUrlRegExp: true,
+      ignoreUserAgentRegExp: true,
+      transactionIgnoreUrlRegExp: true,
+      sanitizeFieldNamesRegExp: true,
+      ignoreMessageQueuesRegExp: true
+    }
     const loggable = {}
     for (const k in this) {
-      if (!EXCLUDE_FIELDS[k] && this[k] !== undefined) {
+      if (EXCLUDE_FIELDS[k] || this[k] === undefined) {
+        // pass
+      } else if (NICE_REGEXPS_FIELDS[k] && Array.isArray(this[k])) {
+        // JSON.stringify() on a RegExp is "{}", which isn't very helpful.
+        loggable[k] = this[k].map(r => r instanceof RegExp ? r.toString() : r)
+      } else {
         loggable[k] = this[k]
       }
     }
