@@ -98,6 +98,10 @@ function attributesFromErr (err) {
 
 // ---- exports
 
+function generateErrorId () {
+  return crypto.randomBytes(16).toString('hex')
+}
+
 // Create an "error" APM event object to be sent to APM server.
 //
 // Required args:
@@ -130,7 +134,7 @@ function createAPMError (args, cb) {
   let numAsyncStepsRemaining = 0 // finish() will call cb() only when this is 0.
 
   const error = {
-    id: crypto.randomBytes(16).toString('hex'),
+    id: generateErrorId(),
     timestamp: args.timestampUs
   }
   if (args.traceContext) {
@@ -260,6 +264,7 @@ function createAPMError (args, cb) {
 }
 
 module.exports = {
+  generateErrorId,
   createAPMError,
 
   // Exported for testing.
