@@ -210,7 +210,12 @@ Instrumentation.prototype._patchModule = function (exports, name, version, enabl
 Instrumentation.prototype.addEndedTransaction = function (transaction) {
   var agent = this._agent
 
-  if (this._started) {
+  if (agent._conf.disableSend) {
+    // Save effort if disableSend=true. This one log.trace related to
+    // disableSend is included as a possible log hint to future debugging for
+    // why events are not being sent to APM server.
+    agent.logger.trace('disableSend: skip sendTransaction')
+  } else if (this._started) {
     var payload = agent._transactionFilters.process(transaction._encode())
     if (!payload) return agent.logger.debug('transaction ignored by filter %o', { trans: transaction.id, trace: transaction.traceId })
     agent.logger.debug('sending transaction %o', { trans: transaction.id, trace: transaction.traceId })
@@ -223,7 +228,9 @@ Instrumentation.prototype.addEndedTransaction = function (transaction) {
 Instrumentation.prototype.addEndedSpan = function (span) {
   var agent = this._agent
 
-  if (this._started) {
+  if (agent._conf.disableSend) {
+    // Save effort and logging if disableSend=true.
+  } else if (this._started) {
     agent.logger.debug('encoding span %o', { span: span.id, parent: span.parentId, trace: span.traceId, name: span.name, type: span.type })
     span._encode(function (err, payload) {
       if (err) {
