@@ -287,10 +287,18 @@ Transaction.prototype._setOutcomeFromHttpStatusCode = function (statusCode) {
 }
 
 Transaction.prototype._captureBreakdown = function (span) {
-  if (this.ended) return
+  if (this.ended) {
+    return
+  }
+
   const agent = this._agent
   const metrics = agent._metrics
   const conf = agent._conf
+
+  // Quick out if disableSend=true, no point in the processing time.
+  if (conf.disableSend) {
+    return
+  }
 
   // Record span data
   if (this.sampled && conf.breakdownMetrics) {
