@@ -23,10 +23,11 @@ class Metrics {
 
   start (refTimers) {
     const metricsInterval = this[agentSymbol]._conf.metricsInterval
+    const enabled = metricsInterval !== 0 && !this[agentSymbol]._conf.disableSend
     this[registrySymbol] = new MetricsRegistry(this[agentSymbol], {
       reporterOptions: {
         defaultReportingIntervalInSeconds: metricsInterval,
-        enabled: metricsInterval !== 0,
+        enabled: enabled,
         unrefTimers: !refTimers,
         logger: new NoopLogger()
       }
